--- a/manifests/brewz/virtual-server.yaml
+++ b/manifests/brewz/virtual-server.yaml
@@ -47,7 +47,7 @@ spec:
               {\"msg\": \"Could not find the resource!\"}
             headers:
               - name: x-debug-original-status
-                value: ${upstream_status
+                value: ${upstream_status}
     - path: /api/inventory
       action:
         proxy:
