--- a/manifests/brewz-application.yaml
+++ b/manifests/brewz-application.yaml
@@ -2,15 +2,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: brewz
-  namespace: upward-gator
+  namespace: light-oryx
 spec:
   project: default
   source:
     path: manifests/brewz
-    repoURL: https://github.com/hiropo20/techxchange-gitops-lab.git
+    repoURL: https://github.com//techxchange-gitops-lab.git
     targetRevision: HEAD
   destination:
-    namespace: upward-gator
+    namespace: light-oryx
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
