--- a/manifests/grafana-subchart.yaml
+++ b/manifests/grafana-subchart.yaml
@@ -3,15 +3,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: grafana
-  namespace: upward-gator
+  namespace: light-oryx
 spec:
   project: default
   source:
     path: charts/grafana
-    repoURL: https://github.com/hiropo20/techxchange-gitops-lab.git
+    repoURL: https://github.com//techxchange-gitops-lab.git
     targetRevision: HEAD
   destination:
-    namespace: upward-gator
+    namespace: light-oryx
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
