--- a/manifests/volterra-ingress-controller-subchart.yaml
+++ b/manifests/volterra-ingress-controller-subchart.yaml
@@ -3,12 +3,12 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: volterra-ingress-controller
-  namespace: upward-gator
+  namespace: light-oryx
 spec:
   project: default
   source:
     path: charts/volterra-ingress-controller
-    repoURL: https://github.com/hiropo20/techxchange-gitops-lab.git
+    repoURL: https://github.com//techxchange-gitops-lab.git
     targetRevision: HEAD
   destination:
     namespace: volt-ic
